force-app/main/default/objects/WorkOrder_Request__c/WorkOrder_Request__c.object-meta.xml
<CustomObject>
    <label>WorkOrder Request</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>WorkOrder Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WorkOrder Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>