force-app/main/default/objects/WorkOrder_Request__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification</label>
    <referenceTo>Classification__c</referenceTo>
    <relationshipLabel>WorkOrder Requests</relationshipLabel>
    <relationshipName>WorkOrder_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>