force-app/main/default/objects/WorkOrder_Request__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue</label>
    <referenceTo>Issue__c</referenceTo>
    <relationshipLabel>WorkOrder Requests</relationshipLabel>
    <relationshipName>WorkOrder_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>