force-app/main/default/objects/WorkOrder_Request__c/fields/Requested_By_Person__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Person__c</fullName>
    <label>Requested By Person</label>
    <length>250</length>
    <type>Text</type>
</CustomField>