force-app/main/default/objects/WorkOrder_Request__c/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade</label>
    <referenceTo>Trade__c</referenceTo>
    <relationshipLabel>WorkOrder Requests</relationshipLabel>
    <relationshipName>WorkOrder_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>